<resources>
    <string name="app_name">MaterialTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_example">Example action</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="tabs">

        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>

    </string-array>
    <string name="title_activity_using_tab_library">UsingTabLibraryActivity</string>
    <string name="action_tab_using_library">Tab using Library</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="vector_activity">VectorAcivity</string>
    <string name="action_tab_using_SlidingTabLayout">UsingSlidingTabLayout</string>

    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>

</resources>
